default/objects/GuildCalculator__mdt/GuildCalculator__mdt.object-meta.xml
<CustomObject>
    <label>Guild Calculator</label>
    <pluralLabel>Guilds Calculator</pluralLabel>
</CustomObject>