default/objects/GuildCalculator__mdt/fields/Damage__c.field-meta.xml
<CustomField>
    <fullName>Damage__c</fullName>
    <label>Damage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>