default/objects/GuildCalculator__mdt/fields/GrandAccount__c.field-meta.xml
<CustomField>
    <fullName>GrandAccount__c</fullName>
    <label>Grand Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>