default/objects/GuildCalculator__mdt/fields/Guild__c.field-meta.xml
<CustomField>
    <fullName>Guild__c</fullName>
    <label>Guild</label>
    <length>255</length>
    <type>Text</type>
</CustomField>