default/objects/GuildCalculator__mdt/fields/SubReason__c.field-meta.xml
<CustomField>
    <fullName>SubReason__c</fullName>
    <label>SubReason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>